...
<string name="text_guest_user_switch">Login as guest user</string>
<string name="text_disable_ssl_switch">Ignore SSL issues</string>
<string name="hint_user_name">Username</string>
<string name="hint_password">Password</string>
<string name="warning_ssl_dialog_negative">Cancel</string>
<string name="warning_ssl_dialog_title">Warning</string>
<string name="warning_ssl_dialog_content">Ignoring SSL certificate validity is incredibly dangerous and opens up the app for all kinds of security problems. Specifically, making the app vulnerable to <a href="https://en.wikipedia.org/wiki/Man-in-the-middle_attack">man-in-the-middle attacks</a>. Use it on your own risk!</string>
<string name="dialog_ok_title">OK</string>
</resources>

